# jz

./: .gitignore  404.html  README.md  commend  deploy.txt  getword.html  index.html
assets/: GradeResultPage-7NeG7Uen.js  GradeResultPage-7WZWYLUd-JUGbhjGv-Cifi0suB-DtguzEiW-Bjw6D9SN-DR_tBeUN-CjQ1abeD.js  GradeResultPage-7WZWYLUd-JUGbhjGv-Cifi0suB-DtguzEiW-Bjw6D9SN-DR_tBeUN.js  GradeResultPage-7WZWYLUd-JUGbhjGv-Cifi0suB-DtguzEiW-Bjw6D9SN.js  GradeResultPage-7WZWYLUd-JUGbhjGv-Cifi0suB-DtguzEiW.js  GradeResultPage-7WZWYLUd-JUGbhjGv-Cifi0suB.js  GradeResultPage-7WZWYLUd-JUGbhjGv.js  GradeResultPage-7WZWYLUd.js  GradeResultPage-BwSG7H9i.js  GradeResultPage-CADVggDr.js  GradeResultPage-DoAd6ADg.js  HistoryPage-BTnhYW28-p6fqv73U-BRpwhMc4-Bsz3l0hA-CUuYNwhn-llsPKPCl-gjbunV6w.js  HistoryPage-BTnhYW28-p6fqv73U-BRpwhMc4-Bsz3l0hA-CUuYNwhn-llsPKPCl.js  HistoryPage-BTnhYW28-p6fqv73U-BRpwhMc4-Bsz3l0hA-CUuYNwhn.js  HistoryPage-BTnhYW28-p6fqv73U-BRpwhMc4-Bsz3l0hA.js  HistoryPage-BTnhYW28-p6fqv73U-BRpwhMc4.js  HistoryPage-BTnhYW28-p6fqv73U.js  HistoryPage-BTnhYW28.js  HistoryPage-Bt0lEfNL.js  HistoryPage-CmfYzFc8.js  HistoryPage-CnTCugFD.js  HistoryPage-D9eMaaTo.js  HistoryPage-iRLiVF7I.css  LoginPage-BiKjdudL.js  LoginPage-Bn0KsnJC.js  LoginPage-CJde_3ad.js  (+116 more)
backend/: .env.example  API.md  README.md  app_server.db  config.py  main.py  pyproject.toml  requirements.txt
backend/scripts/: reset_questions_junzhuan_2026.py
backend/services/: admin_models.py  admin_panel.py  auth.py  db.py  email_service.py  llm_service.py  ocr.py  questions.py  security.py  seed.py  submissions.py  utils.py
(+100 files in other folders)
